Server: Fix GPIO writing