@@ -20,7 +20,8 @@ class SteeringHandler extends Thread {
 
     private void handleOutput(SteeringState state) {
         try {
-            Runtime.getRuntime().exec(String.format("gpio -g write 6 %d && gpio -g pwm 13 %d", state.getDirection(), state.getPower()));
+            Runtime.getRuntime().exec(new String[] { "/bin/bash", "-c",
+                String.format("gpio -g write 6 %d && gpio -g pwm 13 %d", state.getDirection(), state.getPower())});
             System.out.println("Written: " + state.name());
 
         } catch (IOException ex) {
